--- a/cases/plan/insert.yaml
+++ b/cases/plan/insert.yaml
@@ -67,7 +67,7 @@ cases:
       node_tree_str: |
         +-node[kInsertStmt]
           +-table_name: t1
-          +-columns: col1,col2,col3,col4,col5,col6,col7
+          +-columns: [col1, col2, col3, col4, col5, col6, col7]
           +-values[list]:
           |  +-0:
           |    +-expr[primary]
@@ -122,7 +122,7 @@ cases:
       node_tree_str: |
         +-node[kInsertStmt]
           +-table_name: t1
-          +-columns: col1,col2,col3,col4
+          +-columns: [col1, col2, col3, col4]
           +-values[list]:
           |  +-0:
           |    +-expr[primary]
