refactor: rename fedb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,10 @@ if (CMAKE_BUILD_TYPE STREQUAL "")
     set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif ()
 message (STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
-set(FEDB_VERSION_MAJOR 2)
-set(FEDB_VERSION_MINOR 1)
-set(FEDB_VERSION_BUG 0)
-set(FEDB_COMMIT_ID 0)
+set(OPENMLDB_VERSION_MAJOR 2)
+set(OPENMLDB_VERSION_MINOR 1)
+set(OPENMLDB_VERSION_BUG 0)
+set(OPENMLDB_COMMIT_ID 0)
 set(HYBRIDSE_COMMIT_ID 0)
 
 function(get_commitid CODE_DIR COMMIT_ID)
@@ -44,9 +44,9 @@ function(get_commitid CODE_DIR COMMIT_ID)
     set("${COMMIT_ID}" ${COMMIT_ID_TMP} PARENT_SCOPE)
 endfunction()
 
-get_commitid(${PROJECT_SOURCE_DIR} FEDB_COMMIT_ID)
+get_commitid(${PROJECT_SOURCE_DIR} OPENMLDB_COMMIT_ID)
 get_commitid(${PROJECT_SOURCE_DIR}/hybridse HYBRIDSE_COMMIT_ID)
-message(STATUS "COMMIT_ID : ${FEDB_COMMIT_ID}.${HYBRIDSE_COMMIT_ID}")
+message(STATUS "COMMIT_ID : ${OPENMLDB_COMMIT_ID}.${HYBRIDSE_COMMIT_ID}")
 configure_file (
   "${PROJECT_SOURCE_DIR}/src/version.h.in"
   "${PROJECT_SOURCE_DIR}/src/version.h"
@@ -113,10 +113,12 @@ message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 llvm_map_components_to_libnames(LLVM_LIBS support core orcjit nativecodegen)
 add_definitions(${LLVM_DEFINITIONS})
-if(UNIX AND NOT APPLE AND NOT DEFINED SWIG_DIR)
+if(UNIX AND NOT APPLE)
     # TODO: swig 4.0.1 compiled is not portable, check 'swig -swiglib'
     set(SWIG_DIR ${CMAKE_PREFIX_PATH}/share/swig/4.0.1)
 endif()
+find_package(SWIG REQUIRED)
+include(UseSWIG)
 find_package(absl REQUIRED)
 
 find_package(GTest 1.10 EXACT REQUIRED)
