--- a/src/version.h.in
+++ b/src/version.h.in
@@ -15,14 +15,14 @@
  */
 
 
-#ifndef FEDB_VERSION_H
-#define FEDB_VERSION_H
+#ifndef OPENMLDB_VERSION_H
+#define OPENMLDB_VERSION_H
 
-#define FEDB_VERSION_MAJOR @FEDB_VERSION_MAJOR@
-#define FEDB_VERSION_MINOR @FEDB_VERSION_MINOR@
-#define FEDB_VERSION_BUG @FEDB_VERSION_BUG@
+#define OPENMLDB_VERSION_MAJOR @OPENMLDB_VERSION_MAJOR@
+#define OPENMLDB_VERSION_MINOR @OPENMLDB_VERSION_MINOR@
+#define OPENMLDB_VERSION_BUG @OPENMLDB_VERSION_BUG@
 const std::string HYBRIDSE_COMMIT_ID = "@HYBRIDSE_COMMIT_ID@";
-const std::string FEDB_COMMIT_ID = "@FEDB_COMMIT_ID@";
+const std::string OPENMLDB_COMMIT_ID = "@OPENMLDB_COMMIT_ID@";
 #endif /* !VERSION_H */
 
 /* vim: set expandtab ts=2 sw=2 sts=2 tw=100: */
