--- a/java/pom.xml
+++ b/java/pom.xml
@@ -214,6 +214,12 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
 
    </dependencies>
 
