feat: #158, support use database (#159)
* feat: #158, support use database
* build: update zetasql url

--- a/cases/plan/cmd.yaml
+++ b/cases/plan/cmd.yaml
@@ -124,3 +124,12 @@ cases:
         +-node[CMD]
           +-cmd_type: drop index
           +-args: [t1, index1]
+  - id: 16
+    desc: USE DATABASE
+    sql: USE db1
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: use database
+          +-args: [db1]
+
