--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -50,7 +50,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 		<!-- Set the default project version -->
 		<default.project.version>0.1.5</default.project.version>
-		<default.hybridse.sdk.version>0.1.5-pre-5</default.hybridse.sdk.version>
+		<default.hybridse.sdk.version>0.1.5</default.hybridse.sdk.version>
 	</properties>
 
 	<profiles>
